<?xml version="1.0"?>
<package>
  <name>visualprocess</name>
  <version>0.0.1</version>
  <description>The visualprocess package</description>

  <maintainer email="nickqian@funking.com">pi</maintainer>
  <license>BSD</license>


  <url type="website">http://funking.com/</url> 
  <author>Nick Qian</author> 


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
 
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <!--   <test_depend>gtest</test_depend> -->

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>

</package>
